agrega caseId y sacar relacion circular need-stage